--- a/29353-h/29353-h.htm
+++ b/29353-h/29353-h.htm
@@ -620,7 +620,7 @@ sort of intelligent direction.</p>
 
 <p>"What do you make of them,
 sir?" asked Kincaide, his eyes on
-may face. "Can you place them?"</p>
+my face. "Can you place them?"</p>
 
 <p>"No," I admitted, still staring
 with a fixed fascination at the
@@ -875,7 +875,7 @@ things aren't material; they're
 not matter, as we comprehend the
 word. And so, they can't be disintegrated."</p>
 
-<p>"Then, sir, how are to best
+<p>"Then, sir, how are we to best
 them?"</p>
 
 <p>"First, we'll have to know more
